--- a/proposal/introduction.tex
+++ b/proposal/introduction.tex
@@ -57,7 +57,7 @@ There are still some restrictions on how such code can operate (for example, no 
 
 \begin{inset}
 {\bf Thesis statement.}
-Codependence in binary program analysis can be represented in a logic language framework that allows for formal reasoning about the derivation of its conclusions.
+Codependence in binary program analysis can be represented in a logic language framework that allows for formal reasoning about the derivation of its conclusions and increased modularity of analyses.
 \end{inset}
 % Roadmap to defending the thesis statement
 \section{Thesis Roadmap}
