--- a/proposal/ll.tex
+++ b/proposal/ll.tex
@@ -1,7 +1,7 @@
 \newcommand{\pred}[2]{{\bf #1}(#2)}
 \newcommand{\id}[1]{{\it #1}}
 \newcommand{\var}[1]{{\bf #1}}
-\newcommand{\frule}[2]{#1 :- #2}
-\newcommand{\brule}[2]{#1 :~ #2}
+\newcommand{\frule}[2]{#1 \leftarrow #2}
+\newcommand{\brule}[2]{#1 \Leftarrow #2}
 \newcommand{\query}[1]{?#1}
 \newcommand{\imp}{\rightarrow}
