--- a/proposal/abstract.tex
+++ b/proposal/abstract.tex
@@ -14,7 +14,7 @@ Researchers have developed a wide variety of techniques for attacking this probl
 %Previous Work
 Previous work in analyzing binary code has performed type recovery~\cite{bitr}, variable identification~\cite{divine}, control flow recovery~\cite{jakstab,phoenix}, and value analysis~\cite{vsa}.
 However, previous work tended to focus on one or two specific questions at a time rather than holistic analysis.
-Without traditional programming abstractions designed to allow for modular reasoning, co-dependent analyses become more important to understanding the program.
+Without traditional programming abstractions designed to allow for modular reasoning, co-dependent analyses (those with cyclic dependencies on one another) become more important to understanding the program.
 Type recovery depends on dataflow information\cite{bitr,tie,sndwrite}, which in turn depends on control flow.
 Recovering non-trivial control flow requires value analysis to resolve jump targets.
 One variety of value analysis (alias analysis) is sometimes done using type information.\footnote {
@@ -24,13 +24,13 @@ While co-dependency is most prevalent in control flow analysis, it finds its way
 }
 
 {\fontsize{10}{12}\selectfont
-I intend investigate the effects of integrating codependent binary analyses result quality, and how using a logic language to do this affects progammer burden.
+I intend to investigate the effects of integrating co-dependent binary analyses on result quality, and how using a logic language to integrate analyses affects progammer burden.
 %This is Holmes
-To do this, I intend to build \sysname, a system implementing a logic language inspired by Datalog with features geared towards the ability to use a logic program as a means of coordinating independent analyses.
-I will to use this system to investigate how the use of logic languages to describe the dependency between analyses can make writing interdependent analyses easier.
-I want to explore the formal properties of the \sysname\ language, specifically with respect to termination and monotonicity of reasoning off of subsumed facts.
-I will also evaluate the power of combining analyses via \sysname\ which have been traditionally examined separately.
+To do perform this investigation, I intend to build \sysname, a system implementing a logic language inspired by Datalog with features geared towards coordinating independent analyses.
+I will to use this system to investigate how the use of logic languages can make writing interdependent analyses easier.
+I will explore the formal properties of the \sysname\ language, specifically with respect to monotonicity and soundness of reasoning off of incomplete, incrementally improved information.
+I will also evaluate the power of combining analyses via \sysname\ which have traditionally been examined separately.
 %Work Plan
-I will design \sysname\ with the goal of providing a way to mesh existing styles of analysis together, taking into account the potential for nontermination or high cost analyses.
-This thesis will provide semantics for the \sysname\ language, an implementation of a program which actually runs the language, and example applications coordinating multiple analyses.
+I will design \sysname\ with the goal of providing a way to mesh existing analyses together, taking into account the potential for nontermination and high cost analyses.
+This thesis will provide semantics for the \sysname\ language, an implementation of the language, and example applications coordinating multiple analyses.
 }
