--- a/proposal/background.tex
+++ b/proposal/background.tex
@@ -2,9 +2,9 @@
 \label{chap:background}
 % Logic Language
 \section{Logic Language}
-Logic languages are a family of programming languages which express computation as proof search.
-This makes them well suited to the task at hand because it allows us to describe the provenance of information and to separate execution strategy for a suite of analyses from the expression of said analyses.
-I will review Datalog and Prolog as a way of giving a general overview of logic programming, but the field is quite broad.
+Logic languages are a family of mostly declarative programming languages which express computation as a series of rules to be applied to derive a conclusion.
+This makes them well suited to the task at hand because it allows us to describe the provenance of information and to separate the execution strategy for a suite of analyses from the expression of said analyses.
+I will review Datalog and Prolog as a way of giving a general overview of logic programming, but these are not the only logic languages.
 %%Sentence omitted because it forward references too many concepts
 %Datalog and Prolog are selected to give an example of both a forwards-chaining and backwards-chaining search, and to motivate the notion of a database of facts as our incremental store.
 % * Datalog
@@ -38,7 +38,9 @@ Following in the vein of the previous examples,
 expresses that if for some assignment to $\var{P}$, $\var{X}$, and $\var{Y}$, we know that $\var{X}$ shares parent $\var{P}$ with $\var{Y}$, then we can derive that $\var{X}$ and $\var{Y}$ are siblings.
 The left hand side is referred to as the \emph{head clause} and represents the template from which new facts will be built by this rule.
 The right hand side is called the \emph{body clause} and describes the search or match to be performed on the database.
-Rules are applied ``to saturation'', meaning that they are applied repeatedly until the body clause no longer has any new matches in the database.
+Rules are applied ``to saturation'', meaning that they are applied repeatedly until the body clause no longer has any new matches in the database.\footnote {
+Without external code, this is equivalent to ``the head clause is in the database, or the body clause does not match``. However, with external code, the head clause is not necessarily predictable, so I instead describe each rule being run at most once per assignment of variables which matches the database.
+}
 The order in which rules are declared is irrelevant: all rules are examined for matching body clauses repeatedly until none match.
 %   * Simple examples
 \subsubsection{Example: Uncle}
@@ -93,8 +95,8 @@ Consider the rules
         \frule{\pred{related}{\var{Y}, \var{X}}}{\pred{related}{\var{X}, \var{Y}}}\\
         \frule{\pred{related}{\var{X}, \var{Z}}}{\pred{related}{\var{X}, \var{Y}}, \pred{related}{\var{Y}, \var{Z}}}
 \end{gather*}
-This is potentially more interesting because it is a recursive build up of information, unlike the previous example which was considerable as a two-step procedure: find the siblings, then find siblings of parents.
-However, since Datalog applies its rules until saturation, this is not any more difficult than the previous qurery.
+This is potentially more interesting because it is a recursive build up of information, unlike the previous example which could be viewed as a two-step procedure: find the siblings, then find siblings of parents.
+However, since Datalog applies its rules until saturation, this is not any more difficult than the previous query.
 The first rule translates a parent/child relationship into being related.
 The second provides symmetry.
 The third provides transitivity.
@@ -131,11 +133,11 @@ However, having such a table is massively impractical.
 One way to deal with this issue is to introduce external predicates: predicates whose extents are not stored in the database, but are rather computed or queried from some external system when needed.
 This leads to the need for a mode system.
 Consider an external predicate $\pred{sum}{\cdot, \cdot, \cdot}$, where the first entry is the sum of the other two.
-When trying to match the body clause of a rule, it becomes important that at least two entries be provided, or the resulting match set will have the enormous size of $|\mathbf{D}|^2$ where $\mathbf{D}$ is our domain set.
+When trying to match the body clause of a rule, it becomes important that at least two entries be provided; if only one argument is provided, the resulting match set will have the enormous size of $|\mathbf{D}|^2$ where $\mathbf{D}$ is our domain set.
 In the case of functions which are designed to be hard to invert (e.g.,\ a hash function), this becomes not only a result size concern and an actual implementability concern.
 To deal with this, external predicates can have mode signatures, explaining which entries are logical inputs, and which are outputs. For example, we could have
 \[
-        \pred{sum}{+, -, -} \quad \pred{hash}{+, -}
+        \pred{sum}{-, +, +} \quad \pred{hash}{-, +}
 \]
 A mode checking phase on the rule can then guarantee that matches against the sum predicate can be performed using
 \[
@@ -146,13 +148,19 @@ rather than needing to assume the presence of subtraction and possible-addends o
 %   * External predicates can break termination
 Unfortunately, adding external predicates adds all possibilities for their result values to the upper bound for the termination.
 Adding an external predicate which only produces a small type such as a boolean has little effect on our ability to bound execution.
-Adding a large, but still finite bounded type like $\texttt{uint64}$ makes any numerical approximation of runtime from value count irrelevant, but still technicaly gives termination.
+Adding a large, but still finite bounded type like $\texttt{uint64}$ makes any numerical approximation of runtime from value count irrelevant, but still technically gives termination.
 Adding a type with non-finite size like lists or strings \emph{breaks termination}.
+As a simple example, consider an external predicate which appends the character `a' called `extend'. Then
+\begin{gather*}
+  \frule{\pred{infinite}{\var{X}}}{\pred{infinite}{\var{Y}}, \pred{extend}{\var{Y}, \var{X}}}\\
+  \pred{infinite}{``''}
+\end{gather*}
+provides a simple infinite loop, extending the string with more `a's forever.
 
 %   * Stratified negation
 \subsubsection{Stratified Negation}
 Another thing that can be useful to talk about is the inability of the system to prove a particular fact.
-For example, this could be useful to describe routing.
+For example, negation could be useful to describe routing.
 Network reachability can be described similar to $\pred{related}{\cdot, \cdot}$
 \begin{gather*}
         \frule{\pred{reachable}{\var{X}, \var{Y}}}{\pred{link}{\var{X}, \var{Y}}}\\
@@ -185,7 +193,7 @@ There must be no cycles which include one or more negated edges.
 \label{sec:bchain}
 The evaluation model discussed thus far is what is commonly known as forward chaining, or bottom-up search.
 This approach searches for a proof by taking known facts and deriving anything they can hoping to reach the goal.
-However, there are some applications for which this approach does not work well --- as an example, any system that would have a potentially infinite intensional database cannot run with such a semantics.
+However, there are some applications for which this approach does not work well --- as an example, any system that would have a potentially infinite intensional database would never complete execution with such a semantics.
 
 The other approach is known as backwards chaining, or top-down search, and is what is used in Prolog.
 In backwards chaining, search is directed by a particular goal instead.
@@ -198,12 +206,12 @@ For the purposes of this proposal, I'll write backwards chaining rules as
 % * Circumscription
 \subsection{Circumscription}
 \label{sec:circumscription}
-Circumscription is a concept in logic related to including Occam's Razor, or ``common sense'' into deriving a model from logic statements.
+Circumscription is a concept in logic related to including Occam's Razor into deriving a model from logic statements.
 I discuss it here because it will be relevant to the \sysname\ treatment of reasoning from incomplete information.
 
 \newcommand{\true}{\textrm{true}}
 \newcommand{\false}{\textrm{false}}
-As an example of why this might be useful, consider the following:
+As an example of why circumscription might be useful, consider the following:
 There are three cups marked $a$, $b$, and $c$.
 There are balls in cup $a$, and at least one of cups $b$ and $c$.
 This encodes to:
@@ -216,16 +224,16 @@ Circumscription is a mode of reasoning that in this situation allows us to exami
 It is about picking the minimal situation that could correspond to what we know.
 
 More examples are given in McCarthy's paper introducing the idea~\cite{circumscription}.
-An slightly simpler (if imprecise) way of thinking about circumscription is to consider it as taking a specification of truth which is irrefutable, while saying as little as possible --- you're not saying something grounded in fact, you're saying something nobody can prove wrong, while taking as few risks as possible.
+An slightly simpler (if imprecise) way of thinking about circumscription is to consider it as taking a specification of truth which is irrefutable, while interpreting as few things as true as possible --- you're not saying something grounded in fact, you're saying something nobody can prove wrong.
 %   * Original definition by McCarthy
 \subsubsection{Original Definition}
 Originally, circumscription was defined with respect to first order logic.
 Specifically, the circumscription of a predicate $P$ to a predicate $Q$ in a formula $A$ is defined~\cite{circumscription} as
 \[
-(A [P/Q] \wedge \forall x. Q(x) \rightarrow P(x)) \rightarrow (\forall x. P(x) \rightarrow Q(x))
+(A [Q/P] \wedge \forall x. Q(x) \rightarrow P(x)) \rightarrow (\forall x. P(x) \rightarrow Q(x))
 \]
 McCarthy calls this a ``sentence schema'', and is essentially a statement in second order logic (since $Q$ is implicitly existentially quantified here).
-Essentially, this says that for a given formula $A$ we know to be true, and some predicate $P$ we have incomplete information about, if some other (usually artificially defined) predicate $Q$ could be used in $A$ everywhere $P$ was without changing its truth value, and $Q$ is true whenever we know $P$ to be true, then we can have the other half of the implication, making $Q$ a legitimate proxy for $P$.
+Essentially, this says that for a given formula $A$ we know to be true, and some predicate $P$ we have incomplete information about, if some other (usually artificially defined) predicate $Q$ could be used in $A$ everywhere $P$ was without changing its truth value, and $P$ is true whenever we know $Q$ to be true, then we can have the other half of the implication, making $Q$ a legitimate proxy for $P$.
 Practically applying this usually involves declaring a $Q$ which is true in exactly those situations we know $P$ to be.
 As a simple example, consider the formula
 \[
@@ -235,7 +243,7 @@ Define a predicate for circumscription $Q$ as
 \[
         Q(x) \equiv (x = 0) \vee (x = 1) \vee (x = 2)
 \]
-essentially explicitly enumerating the cases in which $P$ must be true. 
+essentially explicitly enumerating the cases in which $P$ must be true.
 Circumscribing $P$ in the example formula using $Q$ yields
 \[
         P(x) \rightarrow (x = 0) \vee (x = 1) \vee (x = 2)
@@ -248,6 +256,7 @@ Specifically, we now know that $\neg P(4)$.
 Circumscription is directly connected to modern logic programming through the negation features present in many languages.
 The database and rules can be considered as a single logical formula, the conjunction of known facts as predicates applied to concrete values, and rules encoded as implications.
 Circumscribing over this formula will yield results consistent with a given logic program, yet also allow us to potentially derive more by giving us an explicit definition of a predicate.
+Circumscription provides the theoretical underpinnings for stratified negation.
 For example, take the system
 \begin{gather*}
         \pred{square}{\id{w}} \quad \pred{square}{\id{x}}\\
@@ -267,34 +276,33 @@ In this way, circumscription forms the basis for the form of negation present in
 While at its core binary analysis is fundamentally similar to program analysis, we encounter challenges when applying techniques from the program analysis world.
 %   * Abstractions stripped out
 Most of these challenges fall into the category of absent abstraction.
-Function locations, variable locations and bounds, variable types, and control flow graphs are all generally taken for granted even in the analysis of ``low level'' languages such as C.
+Function locations, variable locations and bounds, variable types, and control flow graphs are all generally taken for granted even in the analysis of ``low level'' languages such as C, but are absent in binaries.
 
 %   * CFG unknown
 While all of these can cause difficulties, the inability to recover a complete control flow graph can be one of the most difficult to deal with.
 Many algorithms for recovering any of the other missing abstractions depend strongly on having a pre-existing control flow graph\cite{vsa,bddbddb,maymust,tie,bitr,wrappedintervals,Ramalingam2002b}.
 However, without the abstractions present in the source language, determining the potential targets of an indirect (computed) jump becomes difficult, if not impossible.
-Being unsound here can result in unsoundness in every analysis down the road, but frequently ``good enough'' approximations are used due to the difficulty of this problem.
+Being unsound here by asserting complete knowledge of control flow in cases where only partial knowledge is available can result in unsoundness in every analysis down the road, but frequently ``good enough'' approximations are used due to the difficulty of this problem.
 
 %   * Extraordinarily stateful, with large state
 One of the features of functional code that makes it easier to analyze is its thorough reduction of state.
 Traditional procedural/imperative langauges make this slightly more difficult through the use of variables in many places, expanding the set of implicit inputs to each step greatly.
 Binary code is yet more difficult to analyze.
-With no bounds on variables, arrays, or inputs, it becomes quickly difficult to determine what parts of memory and registers are really the relevant state executing forwards from a particular point.
+With information about variables, arrays, or inputs, it becomes quickly difficult to determine what parts of memory and registers are really live.
 Due to the lack of scope or lifetime abstractions, once a new piece of state enters an execution, it is rare for it to leave at a later point --- much of the program image in memory is potential state.
 
 % * Static
 \subsection{Static Analyses}
 %   * What is static?
 Static analyses are those which focus on deriving information from the structure of the complete program.
-While not a hard and fast rule, these are usually properties that talk about many or all paths.
+While not a hard and fast rule, these analyses usually operate on many or all paths.
 
 \subsubsection{Control Flow Recovery}
 \label{sec:cfg}
-Control flow recovery is usually thought of as a static analysis.
-The goal is to generate a complete graph of possible program counter transitions in the program while containing as few spurious edges as possible.
+The goal of control flow recovery is to generate a complete graph of possible program counter transitions in the program while containing as few spurious edges as possible.
 While information from a concrete execution can be useful to the final product (as it contains a series of jumps which the output graph must contain to be correct) it does not allow for the declaration of any control flow graph as complete.
-The simple form of control flow recovery involves performing recursive descent disassembly from a given entry point, watching for a transition to a distinguished exit node (usually via a function return).
-However, indirect jumps due to function pointers, C++ method calls, and even creative compilation of case statements can wreak havoc on this method, since the value being jumped to is not known ahead of time.
+The simple form of control flow recovery involves performing recursive descent disassembly from a given entry point and watching for a transition to a distinguished exit node (usually via a function return).
+However, indirect jumps due to function pointers, C++ virtual method calls, and even creative compilation of case statements can wreak havoc on this method, since the value being jumped to is not known ahead of time.
 
 Each of these can be fairly accurately determined by the compiler when the source is provided.
 The type of a C++ object determines a small subset of legal function targets for a given method.
@@ -304,7 +312,7 @@ All of these methods are not directly usable on raw binary code, since the abstr
 
 \subsubsection{Value Analysis}
 \label{sec:valanal}
-It follows then, that recovering upper bounds on the range of various pieces of state in a program would be useful.
+It follows that recovering overapproximations of the range of potential values for various pieces of state in a program would be useful.
 One common way to do this is to perform abstract interpretation of the program over a domain which is expected to model the range of values well~\cite{vsa,wrappedintervals,wrappedintervals2}.
 
 Unfortunately, this abstract interpretation assumes that the control flow graph has already been determined in order to sequence its transformations.
@@ -313,13 +321,13 @@ The state of the art approach to this is to combine value analysis with control 
 
 \subsubsection{Type Recovery}
 Another important static analysis is type recovery.
-While there is no rule that says there must be types as we think of them in a binary program, they are usually present due to a source language or programmer volition.
+While there is no rule that says there must be types as we think of them in a binary program, they are usually present due to source language or programmer volition.
 Even assembly programmers and dynamic language users~\cite{jsinfer} usually use consistent types to some extent.
 
-Since the annotations have all been compiled away, there are two primary sources for type information: propagation from code boundaries and program action.
+Since the annotations have all been compiled away, there are two primary sources for type information: propagation from API/ABI boundaries and how the program interacts with the structure of the data.
 Propagation~\cite{howard} of type information from code boundaries entails knowing a priori that a particular library or service in use by the program matches some signature, then following definitions of its arguments and uses of its results to annotate the program with this information.
 This helps some, but largely fails on any kind of internal data structure.
-Usage based analysis~\cite{tie,bitr} tends to do better at this, and works by examining how the code defines and uses state and generating constraints for types based on that.
+Usage based analysis~\cite{tie,bitr} tends to perform better at recovering internal structures, and works by examining how the code defines and uses state and generating constraints for types based on that.
 
 % * Dynamic
 \subsection{Dynamic Analyses}
@@ -335,7 +343,7 @@ There are a number of axes along which this technique can differ, but the primar
 
 %   * Symbolic Execution + SMT
 \subsubsection{Symbolic Execution}
-A slightly more sophisticated (though more expensive) approach is to attempt to keep as many inputs as possible ``symbolic'' while executing.
+A slightly more sophisticated (though more expensive) approach is to keep as many inputs as possible ``symbolic'' while executing.
 Essentially, if an exact value is not needed in order to take a step, expressions based on inputs are used in place of concrete values as long as possible.
 When a conditional branch is taken, the condition is added to a path constraint, restricting the range of inputs for which this execution is considered feasible.
 When a potentially dangerous operation is about to be performed (such as jumping to or dereferencing a symbolic value), a check for the plausibility of the ``bad'' scenario can be fed to an SMT solver\footnote{\
