--- a/proposal/introduction.tex
+++ b/proposal/introduction.tex
@@ -12,7 +12,7 @@
 % * Can a tailored logic language solve this problem?
 Poorly or maliciously coded software can cause significant damage.
 The bulk of modern software is distributed in binary-only form, for reasons ranging from a desire to keep proprietary information secret to wanting to avoid compilation or interpretation overhead on the client.
-Unfortunately, inspecting the behavior of machine code is a known difficult problem:
+Unfortunately, inspecting the behavior of machine code is difficult:
 It is undecidable for pathological cases and difficult to approximate in common ones.
 
 Existing tools~\cite{ida, bap, bitblaze, bindead} tend to be designed as a sequence of analyses to perform, with the results of each previous analysis being available to the next.
@@ -21,8 +21,8 @@ If we consider a graph with nodes representing analyses, and edges representing 
 The line model is essentially an ad-hoc form of LLVM\cite{llvm}'s pass model.
 In LLVM's pass model, each pass declares what analyses it depends upon, allowing the LLVM pass manager to ensure the necessary steps are performed and allow a configurable pipeline.
 Considering the graph representation again, LLVM's model looks more like a DAG.
-Jakstab~\cite{jakstab} takes the approach of running their analyses to fixpoint.
-As jakstab does not explicitly encode dependencies between analysis, the graph for this looks like a single cycle.
+Jakstab~\cite{jakstab} takes the approach of running their analyses to a fixed point.
+As Jakstab does not explicitly encode dependencies between analysis, the graph of execution dependencies looks like a single cycle.
 A natural extension then is to allow the expression of dependencies, as in LLVM, but also cycles, as in Jakstab.
 This full graph model of analysis management is what I intend to investigate in my thesis.
 
@@ -32,13 +32,13 @@ Previous work in program analysis suggests that logic languages can help to stru
 Datalog has previously been successfully used to analyze programs~\cite{Lam2005a, Brumley2006b, Alpuente2011, Smaragdakis, Whaley2007}.
 %   * Shows fact-like representation of program properties is feasible
 While the ability to write analyses directly in logic language is interesting, of more potential importance to the feasability of this project is that they were able to model both their input and output knowledge as logic language predicates successfully.
-A wide variety of properties from aliasing in binary code~\cite{Brumley2006b} to security properties such as SQL injectability and XSS~\cite{Lam2005a} have been modeled as facts in a deductive database, suggesting this as a potential common representation.
+A wide variety of properties from aliasing in binary code~\cite{Brumley2006b} to security properties such as SQL injectability and cross site scriptability (XSS)~\cite{Lam2005a} have been modeled as facts in a deductive database, suggesting this as a potential common representation.
 Dataflow analyses are also representable~\cite{McAllester} in this way.
 
 % * Analysis Integration improved results
 As using a logic language to describe the analysis process gives us both a common representation for information and the ability to see which analyses can and should be run when, integration should be easier.
 %   * Jakstab
-Jakstab~\cite{jakstab} is one example where simply integrating two analyses (value analysis and control flow recovery/disassembly) lead to better results than IDA for jump resolution.
+Jakstab~\cite{jakstab} is one example where simply integrating two analyses (value analysis and control flow recovery/disassembly) lead to better results than IDA\cite{ida} for jump resolution.
 If both analyses had been specified as logical rules within the same environment, the additional power Jakstab found by integrating them would have come for free.
 
 %   * Compositional May Must
@@ -55,16 +55,16 @@ There are still some restrictions on how such code can operate (for example, no 
 
 \begin{inset}
 {\bf Thesis statement.}
-Codependence in binary program analysis can be represented in a logic language framework that allows for formal reasoning about the derivation of its conclusions and increased modularity of analyses.
+Co-dependence in binary program analysis can be represented in a logic language that allows for formal reasoning about the derivation of its conclusions and increased modularity of analyses.
 \end{inset}
 % Roadmap to defending the thesis statement
 \section{Thesis Roadmap}
 % * Show the power by
 %   * Implementing the integration of several real analyses using the language
 %   * Attempting to do so without using circumscription or aggregation, and seeing what happens.
-I will seek to investigate this approach by implementing \sysname, a logic language engine designed for the integration of binary analyses.
+I will investigate this approach by implementing \sysname, a logic language engine designed for the integration of binary analyses.
 I will also implement and integrate several real analyses using \sysname.
-This implementation should provide evidence for feasibility of this technique and provide a model for checking result quality.
+This implementation should provide evidence for feasibility of using a logic language to describe and evaluate cyclically dependent analyses and provide a model for checking result quality.
 
 % * Show it can be reasoned about by
 %   * Proving formally the monotonicity of
@@ -94,10 +94,10 @@ In the case of CFG recovery, I anticipate success even more strongly than in the
 The main contributions of this work will be:
 \begin{itemize}
        \item Study of interaction between binary analysis techniques --- using \sysname\ to quantitatively examine combinations of existing analyses for improvements in performance or efficiency.
-       \item Language extensions to fit the technique better to the application
+       \item Language extensions to fit the technique better to the application:
        \begin{itemize}
-         \item Monotonic Aggregators --- adding the ability to efficiently reason about collections of facts in a single rule invocation while not breaking monotonicity.
+         \item Monotonic Aggregators --- adding the ability to efficiently reason about collections of facts in a single rule invocation without allowing facts to transition from derivable to underivable.
          \item Hypothetical Circumscription --- giving a ``stuck'' or incomplete system an Occam's razor motivated set of assumptions to allow it to proceed hypothetically, re-examining the plausibility of the hypotheses when necessary.
        \end{itemize}
-       \item A real system implementation --- designing \sysname\ such that it is stable, efficient, and usable enough to see continued use after the completion of this thesis.
+       \item A real system implementation --- I am designing \sysname\ such that it is stable, efficient, and usable enough to see continued use after the completion of this thesis.
 \end{itemize}
